Pré produção do card finalizada.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="documentos/style.css">
     <link rel="shortcut icon" href="documentos/Treetog-I-Audio-File.ico" type="image/x-icon">
-    <title>Player Music</title>
+    <title>Estação Anime</title>
 </head>
 <body>
+    <div class="container">
+        <div id="player" class="player">
+            <h4> Estação Anime </h4>
+            <div class="card">
+                <div class="card-image"> <img src="documentos/imgs/DBZ.jpg" alt=""></div>
+                <div class="card-content">
+                    <h5>Dragon Ball Z</h5>
+                    <p>Cha-La Head-Cha-La</p>
+                </div>
+            </div>
+            <div class="audio"><audio src="documentos/audio/Dragon Ball Z Abertura Completa Português   Cha La Head Cha La (PT BR.mp3" controls></audio></div>
+        </div>
+    </div>
     
 </body>
 <script src="documentos/script.js"></script>
