mudando as configurações, mundando conteúdo do HTML para o CSS com o intuito de facilitar quando começar a programação com o JS.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
         <div id="player" class="player">
             <h4> Estação Anime </h4>
             <div class="card">
-                <div class="card-image"> <img src="documentos/imgs/DBZ.jpg" alt=""></div>
+                <div class="card-image"> </div>
                 <div class="card-content">
                     <h5>Dragon Ball Z</h5>
                     <p>Cha-La Head-Cha-La</p>
                 </div>
             </div>
-            <div class="audio"><audio src="documentos/audio/Dragon Ball Z Abertura Completa Português   Cha La Head Cha La (PT BR.mp3" controls></audio></div>
         </div>
     </div>
     
