Dando início a programação.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="documentos/style.css">
-    <link rel="shortcut icon" href="documentos/Treetog-I-Audio-File.ico" type="image/x-icon">
+    <link rel="stylesheet" href="documentos/arquivos/style.css">
+    <link rel="shortcut icon" href="documentos/arquivos/Treetog-I-Audio-File.ico" type="image/x-icon">
     <title>Estação Anime</title>
 </head>
 <body>
@@ -15,13 +15,14 @@
             <div class="card">
                 <div class="card-image"> </div>
                 <div class="card-content">
-                    <h5>Dragon Ball Z</h5>
+                    <h6>Dragon Ball Z</h6>
                     <p>Cha-La Head-Cha-La</p>
+                    <audio controls ></audio>
                 </div>
             </div>
         </div>
     </div>
-    
+<script src="documentos/arquivos/data.js"></script>
+<script src="documentos/arquivos/index.js"></script>
 </body>
-<script src="documentos/script.js"></script>
 </html>
