--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <div id="player" class="player">
             <h4> Estação Anime </h4>
             <div class="card">
-                <div class="card-image"> </div>
+                <div class="card-image"> <img ></div> 
+            </div>
                 <div class="card-content">
                     <h6>Dragon Ball Z</h6>
                     <p>Cha-La Head-Cha-La</p>
