tentando resolver a tag audio.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="card-content">
                     <h6>Dragon Ball Z</h6>
                     <p>Cha-La Head-Cha-La</p>
-                    <audio controls ></audio>
+                    <audio controls src=""></audio>
                 </div>
             </div>
         </div>
